// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@resolve-js/module-admin read-models list 1`] = `
Array [
  Array [
    "NAME                 STATUS               SUCCESS EVENT         FAILED EVENT         LAST ERROR          
read-model           status               3/18/05 04:58:31 type N\\\\A                  N\\\\A                 ",
  ],
]
`;

exports[`@resolve-js/module-admin read-models pause 1`] = `
Array [
  Array [
    "ListenerId = \\"readModel\\" paused",
  ],
]
`;

exports[`@resolve-js/module-admin read-models reset 1`] = `
Array [
  Array [
    "ListenerId = \\"readModel\\" reset",
  ],
]
`;

exports[`@resolve-js/module-admin read-models resume 1`] = `
Array [
  Array [
    "ListenerId = \\"readModel\\" running",
  ],
]
`;

exports[`@resolve-js/module-admin sagas list 1`] = `
Array [
  Array [
    "NAME                 STATUS               SUCCESS EVENT         FAILED EVENT         LAST ERROR          
saga                 status               3/18/05 04:58:31 type N\\\\A                  N\\\\A                 ",
  ],
]
`;

exports[`@resolve-js/module-admin sagas pause 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\" paused",
  ],
]
`;

exports[`@resolve-js/module-admin sagas properties get 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\", Key = \\"key\\", Value = \\"value\\"",
  ],
]
`;

exports[`@resolve-js/module-admin sagas properties list 1`] = `
Array [
  Array [
    "NAME                 VALUE               
key                  value               ",
  ],
]
`;

exports[`@resolve-js/module-admin sagas properties remove 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\", Key = \\"key\\" deleted",
  ],
]
`;

exports[`@resolve-js/module-admin sagas properties set 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\", Key = \\"key\\", Value = \\"value\\"",
  ],
]
`;

exports[`@resolve-js/module-admin sagas reset 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\" reset",
  ],
]
`;

exports[`@resolve-js/module-admin sagas resume 1`] = `
Array [
  Array [
    "ListenerId = \\"saga\\" running",
  ],
]
`;
